Too much refactoring